--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -29,8 +29,9 @@ jobs:
 
       - name: Build binary
         run: |
-          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o unoserver-rest-api-linux-amd64 .
-          CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o unoserver-rest-api-linux-arm64 .
+          mkdir -p build
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o build/unoserver-rest-api-linux-amd64 .
+          CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o build/unoserver-rest-api-linux-arm64 .
 
       - name: Log in to Container Registry
         if: github.event_name != 'pull_request'
@@ -70,5 +71,5 @@ jobs:
         with:
           name: binaries
           path: |
-            unoserver-rest-api-linux-amd64
-            unoserver-rest-api-linux-arm64
+            build/unoserver-rest-api-linux-amd64
+            build/unoserver-rest-api-linux-arm64
